# rust-sstp

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  DESIGN_PLAN.md  README.md  TODO.md  deny.toml  flake.nix
.agents/skills/rust-sstp-advance-large/: SKILL.md
.agents/skills/rust-sstp-advance-pr/: SKILL.md
.agents/skills/rust-sstp-advance-small/: SKILL.md
.agents/skills/rust-sstp-continue-branch/: SKILL.md
.agents/skills/rust-sstp-docs-only/: SKILL.md
.agents/skills/rust-sstp-merge-reviewed/: SKILL.md
.agents/skills/rust-sstp-review/: SKILL.md
.agents/skills/rust-sstp-status/: SKILL.md
crates/sstp-harness/: Cargo.toml
crates/sstp-harness/src/: command.rs  main.rs  presentation.rs
crates/sstp-protocol/: Cargo.toml
crates/sstp-session/: Cargo.toml
docs/: architecture.md  bara-patterns.md  coding-rules.md  design-todo.md  domain-primitive-baseline.txt  file-size-baseline.txt  fuzzing.md  panic-baseline.txt  progress.md  scope.md  sstp-data-packet.md  sstp-packet-header.md  sstp-stream-decoder.md  supply-chain.md  unsafe-baseline.txt
fuzz/: Cargo.toml  deny.exceptions.toml
fuzz/fuzz_targets/: sstp_packet_decode.rs
fuzz/seeds/sstp_packet_decode/: control.hex  minimum-data.hex  ppp-data.hex  unsupported-version.hex
scripts/: check-architecture  check-domain-types  check-no-invisible-chars  cve-audit-baseline.json  install-pre-commit-hook  verify  verify-blackbox  verify-cves  verify-fuzz  verify-native  verify-nightly  verify-nix-package  verify-oracle  verify-quick  verify-security  verify-supply-chain
tests/expected/: plan-connect.stdout
(+17 files in other folders)
