[package]
name = "sstp-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sstp-protocol = { path = "../sstp-protocol", version = "0.1.0" }
sstp-session = { path = "../sstp-session", version = "0.1.0" }

[lints]
workspace = true
